# racingkart-results

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml
render/: build_index.py  build_site.py  build_study.py  template.py
studies/: keigo-g2-check.json  keigo06-e2e-verify.json  keigo06-mpc-q4.json  shiitake-mpc-test.json
tests/: conftest.py  test_build_index.py  test_build_site.py  test_build_study.py  test_template.py
