[project]
name = "racingkart-results"
version = "0.1.0"
description = "Render Optuna studies JSON to static HTML for GitHub Pages"
requires-python = ">=3.10"
dependencies = []  # runtime: stdlib only (plotly is loaded client-side via CDN)

[dependency-groups]
dev = ["pytest>=7.0", "ruff>=0.9"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
